Try and build a conda noarch pkg

--- a/meta.yaml
+++ b/meta.yaml
@@ -14,6 +14,7 @@ requirements:
 build:
   preserve_egg_dir: True
   script: python setup.py install
+  noarch_python: True
 
 about:
   home: https://github.com/majerteam/quicklogging
