--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,32 @@
+[metadata]
+name = quicklogging
+version = 0.3.1
+description = helper for easy logging when you're used to print
+long_description = file: README.rst, CHANGELOG.rst
+author = "Feth AREZKI (majerti)"
+author_email = "feth.arezki@majerti.fr"
+url = "https://github.com/majerteam/quicklogging"
+download_url = "https://github.com/majerteam/quicklogging"
+
+[options]
+packages =
+    quicklogging
+
+
+[options.extras_require]
+test =
+    pytest-runner
+    pytest
+    pytest-cov
+    six
+    stringimporter>=0.1.3
+
+
+
 [bdist_wheel]
 universal = 1
 
-[pytest]
+[tool:pytest]
 addopts = 
  --strict
  --maxfail=2
