--- a/setup.cfg
+++ b/setup.cfg
@@ -28,10 +28,11 @@ universal = 1
 
 [tool:pytest]
 addopts = 
- --strict
+ --strict-markers
  --maxfail=2
  --cov=quicklogging --cov-report=term-missing
  --capture=no
+ -p no:logging
 
 [aliases]
 test=pytest
