seems six needs to be installed explicitely

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ download_url = "https://github.com/majerteam/quicklogging"
 [options]
 packages =
     quicklogging
+install_requires =
+    six
 
 
 [options.extras_require]
