provide a description specific to pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 name = quicklogging
 version = 0.3.1
 description = helper for easy logging when you're used to print
-long_description = file: README.rst, CHANGELOG.rst
+long_description = file: pypidesc.rst, CHANGELOG.rst
+long_description_content_type = text/x-rst
 author = "Feth AREZKI (majerti)"
 author_email = "feth.arezki@majerti.fr"
 url = "https://github.com/majerteam/quicklogging"
