--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,15 @@ long_description_content_type = text/x-rst
 author = "Feth AREZKI (majerti)"
 author_email = "feth.arezki@majerti.fr"
 url = "https://github.com/majerteam/quicklogging"
+classifiers =
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
+    Operating System :: OS Independent
+    Development Status :: 5 - Production/Stable
+    Topic :: System :: Logging
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Libraries :: Python Modules
+
 
 [options]
 packages =
