--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description = file: pypidesc.rst, CHANGELOG.rst
 long_description_content_type = text/x-rst
 author = "Feth AREZKI (majerti)"
 author_email = "feth.arezki@majerti.fr"
-url = "https://github.com/majerteam/quicklogging"
+project_url = "https://github.com/majerteam/quicklogging"
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
