--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = quicklogging
-version = 0.3.1
-description = helper for easy logging when you're used to print
+version = 0.3.2
+description = logging made easy, can convert print() calls into logs without changing code
 long_description = file: pypidesc.rst, CHANGELOG.rst
 long_description_content_type = text/x-rst
 author = "Feth AREZKI (majerti)"
